# virtualfluids

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .gitattributes  .gitignore  .gitlab-ci.yml  .virtualfluidsrc  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Contributing.md  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  authors.txt  cpu.cmake  gpu.cmake  lizard.txt  metadata.xml  pyproject.toml  readme.md  readme_gpu.md  setup.cfg  setup.py  sonar-project.properties
cpu/: CMakeLists.txt
cpu/Applications/: Applications.cmake  IncludsList.cmake
cpu/Applications/BeadPack/: CMakeLists.txt
cpu/Applications/BoxBenchmark/: bb.cpp  bbVB.cfg
cpu/Applications/CheckpointConverter/: cbc.cfg
cpu/Applications/ConvectionOfVortex/: CMakeLists.txt
cpu/Applications/DLR-F16/: F16Bombadil.cfg  startJobPhoenix.slrm
cpu/Applications/FlowAroundCylinder/: cylinder.cpp1  cylinder.cpp2
cpu/Applications/Hagen_Poiseuille_flow/: CMakeLists.txt
cpu/Applications/Hagen_Poiseuille_flow2/: pf3.cfg
cpu/Applications/InterfaceTest/: itest.cpp
cpu/Applications/LaminarTubeFlow/: CMakeLists.txt  ltf.cfg
cpu/Applications/LaminarTubeFlowConv/: ltf.cpp
cpu/Applications/LidDrivenCavity/: CMakeLists.txt
cpu/Applications/OrganPipe/: config.txt
cpu/Applications/PlateWithPorousInlay/: CMakeLists.txt
cpu/Applications/Wing/: Bombadil.cfg  CMakeLists.txt
cpu/Applications/aperm/: PA80-110-200-250-HLRN.cfg
cpu/Applications/bChannelA/: CMakeLists.txt
cpu/Applications/bChannelVA/: Averaging.cpp
cpu/Applications/bKanal/: bKanal.cpp
cpu/Applications/bKanal2/: bKanal2.cpp
cpu/Applications/bKanalAv/: CMakeLists.txt
cpu/Applications/band/: CMakeLists.txt
cpu/Applications/bbone/: CMakeLists.txt
cpu/Applications/bond_test/: CMakeLists.txt
cpu/Applications/greenvortex/: CMakeLists.txt
cpu/Applications/gridRf/: CMakeLists.txt  gridRf.cpp
cpu/Applications/insitu_demoserver/: CMakeLists.txt
cpu/Applications/levels/: CMakeLists.txt
cpu/Applications/micropart/: micropartTestQs.hpp  micropartTestQs2.hpp
cpu/Applications/musis/: musis.cpp
cpu/Applications/pChannel/: CMakeLists.txt  configHLRNpChannel.cfg  configLudwigpChannel.cfg  pChannel.cpp
cpu/Applications/perm/: configBombadil.txt
cpu/Applications/pmTortu/: streamlinesMean.py
cpu/Applications/reefer/: CMakeLists.txt  reefer.cpp
cpu/Applications/screw/: screw.cpp
cpu/Applications/teperm/: TE-PA80-110gradiert6mm_1.cfg
cpu/Applications/vfscript/: CMakeLists.txt  vfscript.cpp
cpu/CMake/: CMakeCompilerMacros.txt  CMakeSetCompilerFlags.txt  VirtualFluidsMacros.cmake
cpu/CMake/cmake_config_files/: AMAN.config.cmake  ARAGORN.config.cmake  BLOGIN1.config.cmake  CCSMASTER.config.cmake  GENIUS1.config.cmake  HELM.config.cmake  LOGIN22.config.cmake  SAMWEIS.config.cmake  UBUNTU.config.cmake
cpu/CMake/compilerflags/: gcc33.cmake  gcc34.cmake  gcc54.cmake  gcc82.cmake  gccGeneric.cmake  icc101.cmake  icc140.cmake  icc150.cmake  icc170.cmake  msvc10_64.cmake  msvc11_32.cmake  msvc11_64.cmake  msvc19_64.cmake  msvc8_64.cmake
cpu/DemCoupling/: CreateDemObjectsCoProcessor.h  DemCoProcessor.cpp  DemCoProcessor.h  MovableObjectInteractor.cpp
cpu/DemCoupling/physicsEngineAdapter/: PhysicsEngineGeometryAdapter.h
cpu/DemCoupling/reconstructor/: VelocityBcReconstructor.cpp
cpu/Documentation/doc/: install.html  main.md
cpu/Documentation/doxygen/: VF_Doxyfile.dox
cpu/VirtualFluidsBasic/: CMakeLists.txt  IncludsList.cmake
cpu/VirtualFluidsBasics/geometry3d/: GbPoint3D.h  GbVector3D.h
cpu/VirtualFluidsCore/: CMakeLists.txt  IncludsList.cmake
cpu/VirtualFluidsCore/BoundaryConditions/: BCAdapter.h  BCAlgorithm.cpp  BCArray3D.cpp  BCFunction.cpp  BCFunction.h  BCProcessor.cpp  EqDensityBCAlgorithm.cpp  (+5 more)
pythonbindings/: CMakeLists.txt
pythonbindings/pyfluids/: __init__.py  py.typed  timeseries_probe_reader.py
pythonbindings/pyfluids-stubs/: __init__.pyi  lbm.pyi  logger.pyi  parallel.pyi
pythonbindings/pymuparser/: __init__.py
pythonbindings/src/: CMakeLists.txt  VirtualFluids.cpp  VirtualFluidsModulesCPU.cpp  VirtualFluidsModulesGPU.cpp  communicator.cpp  lbm.cpp  lbm.h  logger.cpp  logger.h  muParser.cpp  parallel.cpp  parallel.h  pyfluids.cpp
source/: Applications.cmake  CMakeLists.txt  IncludsList.cmake  VirtualFluids.h
source/Applications/: Applications.cmake  IncludsList.cmake  VirtualFluids.h
source/CMake/: CMakeCABMacros.txt  CMakeCompilerMacros.txt  CMakeRubyMacros.txt  CMakeSetCompilerFlags.txt  CMakeSwigMacros.txt
source/DemCoupling/: CreateDemObjectsCoProcessor.cpp  CreateDemObjectsCoProcessor.h  CreateGeoObjectsCoProcessor.cpp  CreateGeoObjectsCoProcessor.h  DemCalculator.cpp  DemCalculator.h  DemCoProcessor.cpp  DemCoProcessor.h  DemCoupling.cmake  DemCouplingCMakeMacros.txt  IncludsList.cmake  MovableObjectInteractor.cpp  MovableObjectInteractor.h  PePartitioningGridVisitor.cpp  PePartitioningGridVisitor.h  RestartDemCouplingCoProcessor.cpp  RestartDemCouplingCoProcessor.h  RestartDemObjectsCoProcessor.cpp  RestartDemObjectsCoProcessor.h  WriteDemObjectsCoProcessor.cpp  WriteDemObjectsCoProcessor.h  WritePeBlocksCoProcessor.cpp  WritePeBlocksCoProcessor.h
source/PythonVirtualFluids/: CMakeLists.txt  VFtest.py
source/Scripts/: CollectHeader.py  ConnTest.py  ExtractTar.py  TimeAveraging.nb  deltat.py
source/VirtualFluidsBasic/: IncludsList.cmake  VirtualFluidsBasic.cmake
source/VirtualFluidsCore/: CMakeLists.txt  IncludsList.cmake  PointerDefinitions.h
src/GridGenerator/: CMakeLists.txt  GridGenerator_EXPORT.h  global.h
src/basics/: CMakeLists.txt  DataTypes.h  PointerDefinitions.h  Singelton.h  VirtualFluidsDefinitions.in.h  buildInfo.cmake  buildInfo.h  buildInfo.in.cpp
src/input/: CMakeLists.txt  Input.cpp  Input.h  Input_EXPORT.h
src/parallel/: CMakeLists.txt  Communicator.cpp  Communicator.h  MPICommunicator.cpp  MPICommunicator.h  MetisPartitioner.cpp  MetisPartitioner.h  NullCommunicator.cpp  NullCommunicator.h
src/utilities/: CMakeLists.txt  StringUtil.cpp  StringUtil.h  StringUtilTest.cpp  utilities_EXPORT.h
(+7906 files in other folders)
