[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pyfluids"
version = "0.1.0"
description = "Python bindings for VirtualFluids"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
url = "https://git.rz.tu-bs.de/irmb/virtualfluids"

[tool.cmake]
jobs = 8

[tool.scikit-build]
build-dir = "build"
strict-config = true
logging.level = "INFO"

[tool.scikit-build.wheel]
packages = ["pythonbindings/pyfluids", "pythonbindings/pyfluids-stubs", "pythonbindings/pymuparser"]

[tool.scikit_build.cmake]
verbose = true
build-type = "Release"

[tool.scikit-build.cmake.define]
VF_ENABLE_PYTHON_BINDINGS = "ON"
BUILD_SHARED_LIBS = "OFF"
VF_ENABLE_UNIT_TESTS = "OFF"
VF_ENABLE_WARNINGS_AS_ERRORS = "OFF"


[mypy]
plugins = "numpy.typing.mypy_plugin"

