[metadata]
name = pyfluids
description = Python binding for VirtualFluids
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
url = https://git.rz.tu-bs.de/irmb/virtualfluids
version = 0.0.1

[options]
zip_safe = False
packages = find:
package_dir =
    =pythonbindings
python_requires = >=3.6
install_requires =
    cmake-build-extension

[options.packages.find]
where = pythonbindings

